--- a/package.json
+++ b/package.json
@@ -6,19 +6,30 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
+    "@mdx-js/mdx": "^3.0.1",
+    "@mdx-js/react": "^3.0.1",
+    "@next/mdx": "^14.2.3",
     "gray-matter": "^4.0.3",
+    "highlight.js": "^11.9.0",
     "next": "14.2.3",
+    "next-mdx-remote": "^5.0.0",
+    "next-sitemap": "^4.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
-    "remark": "^15.0.1",
-    "remark-html": "^16.0.1"
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-highlight": "^7.0.0",
+    "rehype-slug": "^6.0.0",
+    "sharp": "^0.33.4"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@types/estree": "^1.0.5",
+    "@types/node": "^20.14.2",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
