--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "highlight.js": "^11.9.0",
     "next": "14.2.3",
     "next-mdx-remote": "^5.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.4",
     "react-icons": "^5.2.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-scroll": "^1.9.0",
     "react-slick": "^0.30.2",
     "rehype-autolink-headings": "^7.1.0",
@@ -24,6 +26,7 @@
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/typography": "^0.5.13",
     "@types/aos": "^3.0.7",
     "@types/node": "^20",
